WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.9-dev, 2012-07-07


Version 0.3.9 (under dev!)
--------------------------

* core: add default key alt+"s" (toggle aspell)
* core: add cmake option "MANDIR" (bug #36776)
* core: add callback "nickcmp" in buffers
* core: add horizontal separator between windows, new options
  weechat.look.window_separator_{horizontal|vertical}
* core: add options weechat.look.color_nick_offline and
  weechat.color.chat_nick_offline{_highlight|_highlight_bg} to use different
  color for offline nicks in prefix (task #11109)
* core: reallow names beginning with "#" for bars, proxies and filters
* core: escape special chars (`#[\`) in configuration files for name of options
  (bug #36584)
* aspell: add option aspell.check.enabled, add options enable/disable/toggle for
  command /aspell (rename options enable/disable/dictlist to
  setdict/deldict/listdict), display aspell status with /aspell (task #11988)
* aspell: add missing dictionaries (ast/grc/hus/kn/ky)
* guile: fix crash when unloading a script without pointer to interpreter
* guile: fix path of guile include dirs in cmake build (patch #7790)
* irc: add bar item "buffer_modes", remove option irc.look.item_channel_modes
  (task #12022)
* irc: fix parsing of user modes (ignore everything after first space)
  (bug #36756)
* irc: add option irc.look.ctcp_time_format to customize reply to CTCP TIME
  (task #12150)
* irc: fix freeze when reading on socket with SSL enabled (bug #35097)
* irc: reallow names beginning with "#" for servers
* lua: support of lua 5.2
* lua: fix crash when unloading a script without pointer to interpreter
* python: fix crash when unloading a script without pointer to interpreter
* ruby: detect ruby version 1.9.3 in cmake and autotools
* scripts: ignore call to "register" (with a warning) if script is already
  registered

Version 0.3.8 (2012-06-03)
--------------------------
