@@ -578,6 +578,11 @@
 ** type: boolean
 ** values: on, off (default value: `on`)
 
+* [[option_weechat.look.jump_smart_back_to_buffer]] *weechat.look.jump_smart_back_to_buffer*
+** description: `jump back to initial buffer after reaching end of hotlist`
+** type: boolean
+** values: on, off (default value: `on`)
+
 * [[option_weechat.look.mouse]] *weechat.look.mouse*
 ** description: `enable mouse support`
 ** type: boolean
