@@ -123,6 +123,7 @@ struct t_config_option *config_look_item_time_format;
 struct t_config_option *config_look_item_buffer_filter;
 struct t_config_option *config_look_jump_current_to_previous_buffer;
 struct t_config_option *config_look_jump_previous_buffer_when_closing;
+struct t_config_option *config_look_jump_smart_back_to_buffer;
 struct t_config_option *config_look_mouse;
 struct t_config_option *config_look_mouse_timer_delay;
 struct t_config_option *config_look_nickmode;
@@ -2028,6 +2029,11 @@ config_weechat_init_options ()
         "jump_previous_buffer_when_closing", "boolean",
         N_("jump to previously visited buffer when closing a buffer (if "
            "disabled, then jump to buffer number - 1)"),
+        NULL, 0, 0, "on", NULL, 0, NULL, NULL, NULL, NULL, NULL, NULL);
+    config_look_jump_smart_back_to_buffer = config_file_new_option (
+        weechat_config_file, ptr_section,
+        "jump_smart_back_to_buffer", "boolean",
+        N_("jump back to initial buffer after reaching end of hotlist"),
         NULL, 0, 0, "on", NULL, 0, NULL, NULL, NULL, NULL, NULL, NULL);
     config_look_mouse = config_file_new_option (
         weechat_config_file, ptr_section,
